--- a/CalculatorForm.xaml
+++ b/CalculatorForm.xaml
@@ -13,12 +13,12 @@
 
         <Image Margin="-5,0,-1.667,-3.333" Source="photo_2020-08-05_23-28-49 - Copy.jpg" Stretch="Fill" Width="728.333"/>
 
-        <TextBox x:Name="edtAccountBalance" HorizontalAlignment="Left" Height="26" Margin="40,239,0,0" TextWrapping="Wrap" Text="Account Balance" VerticalAlignment="Top" Width="150" FontSize="16" Cursor="Pen" AutomationProperties.Name="edtAccountBalance"/>
+        <TextBox x:Name="edtAccountBalance" HorizontalAlignment="Left" Height="26" Margin="40,239,0,0" TextWrapping="Wrap" Text="Account Balance" VerticalAlignment="Top" Width="150" FontSize="16" Cursor="Pen" AutomationProperties.Name="edtAccountBalance" MouseEnter="edtAccountBalance_MouseEnter"  />
         <Label x:Name="lblAccountType" Content="Account type ?" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,295,0,0" Width="141" FontSize="16" Height="35" Foreground="White"/>
         <Label x:Name="lblAccountBalance" Content="Account Balance ?" HorizontalAlignment="Left" Margin="20,189,0,0" VerticalAlignment="Top" FontSize="16" Width="160" Height="31" Foreground="White"/>
         <Label x:Name="lblPipsRisk" Content="Account Currency ?" HorizontalAlignment="Left" Margin="215,185,0,0" VerticalAlignment="Top" FontSize="16" Height="29" Width="151" Foreground="White" RenderTransformOrigin="0.503,0.506"/>
         <Label x:Name="lblPercentageRisk" Content="Risk Percentage ?" HorizontalAlignment="Left" Margin="20,405,0,0" VerticalAlignment="Top" FontSize="16" Height="29" Width="136" Foreground="White"/>
-        <TextBox x:Name="edtPercentageRisk" HorizontalAlignment="Left" Height="26" Margin="40,460,0,0" TextWrapping="Wrap" Text="Percentage Risk" VerticalAlignment="Top" Width="145" FontSize="16" Cursor="Pen" AutomationProperties.Name="edtPercentageRisk"/>
+        <TextBox x:Name="edtPercentageRisk" HorizontalAlignment="Left" Height="26" Margin="40,460,0,0" TextWrapping="Wrap" Text="Percentage Risk" VerticalAlignment="Top" Width="145" FontSize="16" Cursor="Pen" AutomationProperties.Name="edtPercentageRisk" MouseEnter="edtPercentageRisk_MouseEnter"/>
         <Label x:Name="lblAccountInfo" Content="Account Information :" HorizontalAlignment="Left" Margin="14,29,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" Height="31" Width="176" Foreground="White"/>
 
         <RichTextBox x:Name="rtbInformation" HorizontalAlignment="Left" Height="511" Margin="399,31,0,0" VerticalAlignment="Top" Width="296" FontSize="48" SpellCheck.IsEnabled="True" Background="Black" AutomationProperties.Name="rtbInformation" BorderBrush="#FFFE0606" Foreground="White">
@@ -50,12 +50,12 @@
         </ComboBox>
         <Image Margin="529,36,342.667,417.333" Source="LOGO.v4_burned.v1.png" Stretch="Fill"/>
         <Button x:Name="btnCalculate" Content="Calculate" HorizontalAlignment="Left" Margin="414,483,0,0" VerticalAlignment="Top" Width="265" Click="btnCalculate_Click" Height="48" FontWeight="Bold" FontSize="18"/>
-        <TextBox x:Name="edtSlPips" HorizontalAlignment="Left" Height="26" Margin="224,130,0,0" TextWrapping="Wrap" Text="Stop Loss Pips" VerticalAlignment="Top" Width="160" FontSize="16" Cursor="Pen" AutomationProperties.Name="edtSlPips"/>
+        <TextBox x:Name="edtSlPips" HorizontalAlignment="Left" Height="26" Margin="224,130,0,0" TextWrapping="Wrap" Text="Stop Loss Pips" VerticalAlignment="Top" Width="160" FontSize="16" Cursor="Pen" AutomationProperties.Name="edtSlPips" MouseEnter="edtSlPips_MouseEnter"/>
         <Label x:Name="lblSlPips" Content="Stop Loss (Pips) ?" HorizontalAlignment="Left" Margin="215,76,0,0" VerticalAlignment="Top" FontSize="16" Height="29" Width="136" Foreground="White"/>
         <Image Margin="520,38,31.333,361.667" Source="LOGO.v4_burned.v1.png" Stretch="Fill"/>
         <TextBox x:Name="edtCurrencyValue" HorizontalAlignment="Left" Height="25" Margin="225,355,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="155" FontSize="10"/>
         <Label x:Name="lblQuestion" Content="Label" HorizontalAlignment="Left" Margin="215,295,0,0" VerticalAlignment="Top" Height="30" Width="160" Foreground="White"/>
-        <ComboBox x:Name="cmbTradingPair" HorizontalAlignment="Left" Margin="40,130,0,0" VerticalAlignment="Top" Width="150" Cursor="Hand" Height="25" SelectionChanged="cmbTradingPair_SelectionChanged">
+        <ComboBox x:Name="cmbTradingPair" HorizontalAlignment="Left" Margin="40,130,0,0" VerticalAlignment="Top" Width="150" Cursor="Hand" Height="25" >
             <ListBoxItem Content="EUR/USD"/>
             <ListBoxItem Content="GBP/USD"/>
             <ListBoxItem Content="USD/CHF"/>
